# voxelc

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_old.txt  LICENSE  README.md
glad-3.3-core/include/glad/: glad.h
glad-3.3-core/src/: glad.c
glad-3.3.compat/include/glad/: glad.h
glad-3.3.compat/src/: glad.c
glad-4.6-compat/include/glad/: glad.h
glad-4.6-compat/src/: glad.c
glad-4.6-core/include/glad/: glad.h
glad/src/: glad.c
resources/shaders/: fragment_2d.glsl  fragment_texture.glsl  ui_fragment.glsl  ui_vertex.glsl  vertex_2d.glsl  vertex_texture.glsl
src/: CMakeLists.txt  main.cpp  voxelc.h
src/Core/: assets.h  atlas.h  block.h  camera.h  hierarchyMap.h  instance.h  object.h  transform.h
src/Core/Block/: block.cpp  block.h  blockDatabase.cpp  blockDatabase.h
src/Core/Input/: inputManager.cpp  inputManager.h
src/Core/Math/: frustrum.h
src/Core/Renderer/: renderer.cpp  renderer.h  renderer2D.cpp  renderer2D.h
src/Core/Rendering/: mesh.h  meshRenderer.h  shader.h  texture.h  vertex.h  vertex2D.h  vertexBuffer.h  vertexBuffer2D.h
src/Core/UI/: uiElement.h  uiRect.h  uiRenderer.h  uiVertex.h  uiVertexBuffer.h
src/Core/Util/: AABB.h  spatialMesh.h  vertex.h
src/Core/World/: chunk.h  world.cpp  world.h  worldGenerator.h
src/World/: chunk.h  perlinNoise.h  world.h  worldGenerator.h
src/rendering/: mesh.h  meshRenderer.h  vertex.h
